--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
         <div class="hand"></div>
       </div>
       <div class="action">
-        <button id="" type="button" class="btn"></button>
+        <button id="fightBtn" type="button" class="btn"></button>
         <button id="" type="button" class="btn"></button>
         <button id="" type="button" class="btn"></button>
       </div>
     </div>
+    <script src="./javascript.js"></script>
   </body>
 </html>
