--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="hand"></div>
       </div>
       <div class="action">
-        <button id="fightBtn" type="button" class="btn"></button>
+        <button id="startBtn" type="button" class="btn">Start</button>
         <button id="" type="button" class="btn"></button>
         <button id="" type="button" class="btn"></button>
       </div>
