show card and update game

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <div id="message"></div>
     <div id="board">
       <div id="player1" class="players">
-        <div class="score"></div>
+        <div style="color:red;"
+ class="score"></div>
         <div class="hand"></div>
       </div>
       <div id="player2" class="players">
-        <div class="score"></div>
+        <div class="score" style="color:red;"
+></div>
         <div class="hand"></div>
       </div>
       <div class="action">
