--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <div id="message"></div>
     <div id="board">
       <div id="player1" class="players">
-        <div style="color:red;"
- class="score"></div>
+        <div class="score" style="color:green;"></div>
         <div class="hand"></div>
       </div>
       <div id="player2" class="players">
-        <div class="score" style="color:red;"
+        <div class="score" style="color:green;"
 ></div>
         <div class="hand"></div>
       </div>
