--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./card.css" />
     <title>War Card</title>
   </head>
   <body>
@@ -11,20 +12,21 @@
     <div id="message"></div>
     <div id="board">
       <div id="player1" class="players">
-        <div class="score" style="color:green;"></div>
+        <div class="score" style="color:green;">Player1's score : 26</div>
         <div class="hand"></div>
       </div>
       <div id="player2" class="players">
-        <div class="score" style="color:green;"
-></div>
+        <div class="score" style="color:green;">Player2's score: 26
+</div>
         <div class="hand"></div>
       </div>
-      <div class="action">
-        <button id="startBtn" type="button" class="btn">Start</button>
-        <button id="" type="button" class="btn"></button>
-        <button id="" type="button" class="btn"></button>
-      </div>
     </div>
+    <div class="action">
+      <button id="startBtn" type="button" class="btn">Start</button>
+      <button id="" type="button" class="btn"></button>
+      <button id="" type="button" class="btn"></button>
+    </div>
+
     <script src="./javascript.js"></script>
   </body>
 </html>
