--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     </div>
     <div class="action">
       <button id="startBtn" type="button" class="btn">Start</button>
-      <button id="" type="button" class="btn"></button>
-      <button id="" type="button" class="btn"></button>
+      <button id="startBtn" type="button" class="btn" onclick={restartGame
+}>Play again</button>
+      <p id="message"></p>
     </div>
 
     <script src="./javascript.js"></script>
